Fix a typo in the tutorial

--- a/docs/source/notebooks/tutorial/2-Basics-Aggregate-Filter-Limit.ipynb
+++ b/docs/source/notebooks/tutorial/2-Basics-Aggregate-Filter-Limit.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "## Accessing an Impala table\n",
     "\n",
-    "The optional `database` paramter allows to fully qualify the table."
+    "The optional `database` parameter allows to fully qualify the table."
    ]
   },
   {
